--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para Camila Teixeira com amor.</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsivo.css">
 </head>
 
 <body>
